# turbine

./: CMakeLists.txt  Demo.ipynb  StreamlineRenderPlot3D.cpp  StreamlineRenderUnstructured.cpp  Untitled0.ipynb  VortexDetector.C  anomaly.eps  anomaly_gui.m  anomaly_gui_1420.m  anomaly_gui_multiv.m  cmd_arg_reader.cpp  cmd_arg_reader.h  computeFTLE.cpp  convertVTK.cpp  convertunstructured.cpp  distribution_anomaly.m  embed.ipynb  extractvariables.cpp  extractvariables_1passage.cpp  flowsepcount.cpp  gmm_emd.cpp  load_counts.m  load_degrees.m  load_flowsepcount.m  load_probes.m  load_probes_5runs.m  load_probes_simulation.m  mycwt.m  mymorlet.m  out.probe_reading.f  plot_anomaly.m  plot_fft.m  plot_local_dist_search.m  plot_massflow.m  plot_morlet.m  plot_msflow_simulation.m  plot_msflow_simulation_1420.m  plot_probes.m  plot_ring.m  plot_temporal_anomaly.m  (+26 more)
